--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   --radius:18px;
   --font:30px;
+  --small:24px;
 }
 
 *{box-sizing:border-box}
@@ -40,20 +41,8 @@ header{
 }
 
 h1{margin:0;font-size:1.3em}
-.sub{margin-top:6px;color:var(--muted);font-size:.9em}
 
 main{max-width:980px;margin:0 auto;padding:14px}
-
-.tabs{display:flex;gap:10px;margin-bottom:14px;flex-wrap:wrap}
-.tab{
-  padding:12px 18px;
-  border-radius:999px;
-  border:2px solid var(--border);
-  background:var(--panel);
-  color:var(--fg);
-  font-weight:950;
-}
-.tab.on{border-color:var(--focus);background:var(--panel2)}
 
 .card{
   background:var(--panel);
@@ -86,39 +75,53 @@ button{
   font-weight:950;
   background:var(--panel2);
 }
+
 button.primary{
   background:var(--focus);
   color:#07101f;
   border-color:transparent;
 }
 
-.grid2{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-.grid3{display:grid;grid-template-columns:1fr 1fr 1fr;gap:12px}
-@media(max-width:820px){.grid2,.grid3{grid-template-columns:1fr}}
+button.big{
+  padding:22px 18px;
+  border-radius:22px;
+  font-size:1.1em;
+}
 
-.checklist{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-@media(max-width:820px){.checklist{grid-template-columns:1fr}}
+.grid3{display:grid;grid-template-columns:1fr 1fr 1fr;gap:12px}
+@media(max-width:820px){.grid3{grid-template-columns:1fr}}
+
+.checklist{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:10px;
+  font-size:0.85em; /* smaller symptoms text */
+}
+@media(max-width:820px){.checklist{grid-template-columns:1fr 1fr}}
 
 .check{
   display:flex;
   align-items:center;
-  gap:14px;
-  padding:14px;
+  gap:12px;
+  padding:12px;
   border:2px solid var(--border);
   border-radius:16px;
   background:#0b0d12;
 }
-.check input{width:34px;height:34px}
+.check input{width:26px;height:26px}
 
 .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+
 .badge{
   padding:10px 14px;
   border-radius:999px;
   border:2px solid var(--border);
   background:#0b0d12;
   font-weight:950;
+  font-size:var(--small);
 }
-.note{color:var(--muted);font-size:.9em}
+
+.note{color:var(--muted);font-size:var(--small)}
 .danger{color:var(--danger);font-weight:950}
 
 .hidden{display:none}
@@ -126,212 +129,348 @@ button.primary{
 .item{
   border:2px solid var(--border);
   border-radius:16px;
-  padding:12px;
+  padding:14px;
   background:#0b0d12;
   margin-top:10px;
 }
+
+.item .when{font-size:var(--small);color:var(--muted);margin-bottom:8px}
+.item .bigline{font-size:1.05em;font-weight:950;margin-bottom:8px}
+.item .line{font-size:var(--small);color:var(--fg);opacity:.95}
+.item .line.muted{color:var(--muted)}
+hr.sep{border:0;border-top:2px solid var(--border);margin:14px 0}
 
 canvas{
   width:100%;
   border:2px solid var(--border);
   border-radius:16px;
   background:#0b0d12;
+  display:block;
 }
+
+.toolbar{
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+  margin-top:12px;
+}
+.toolbar button{flex:1; min-width:220px}
 </style>
 </head>
 
 <body>
 <header>
   <h1>Vitals Tracker</h1>
-  <div class="sub">Dark • Accessible • Local only</div>
 </header>
 
 <main>
-  <div class="tabs">
-    <button class="tab on" id="tEntry">Add</button>
-    <button class="tab" id="tLog">Log</button>
-    <button class="tab" id="tCharts">Charts</button>
-  </div>
 
-  <!-- ENTRY -->
-  <section class="card" id="pEntry">
-    <div class="grid2">
-      <div>
-        <label>Date</label>
-        <input id="date" type="date">
-      </div>
-      <div>
-        <label>Time</label>
-        <input id="time" type="time">
-      </div>
+  <!-- HOME -->
+  <section class="card" id="pHome">
+    <div class="toolbar">
+      <button class="big primary" id="goAdd">Add</button>
+      <button class="big" id="goLog">Log</button>
+      <button class="big" id="goCharts">Charts</button>
+    </div>
+    <hr class="sep" />
+    <div class="note" id="homeHint">Tap “Add” to record BP.</div>
+  </section>
+
+  <!-- ADD -->
+  <section class="card hidden" id="pAdd">
+    <div class="row">
+      <div class="badge" id="stamp">Time: now</div>
+      <div class="badge" id="status">Enter BP</div>
+      <div class="danger" id="crisis" style="display:none">Possible crisis</div>
     </div>
 
-    <div class="grid3">
-      <div><label>Systolic</label><input id="sys" type="number"></div>
-      <div><label>Diastolic</label><input id="dia" type="number"></div>
-      <div><label>Heart Rate</label><input id="hr" type="number"></div>
+    <!-- first thing: BP boxes -->
+    <div class="grid3" style="margin-top:8px">
+      <div><label>Systolic</label><input id="sys" type="number" inputmode="numeric" autocomplete="off"></div>
+      <div><label>Diastolic</label><input id="dia" type="number" inputmode="numeric" autocomplete="off"></div>
+      <div><label>Heart Rate</label><input id="hr" type="number" inputmode="numeric" autocomplete="off"></div>
     </div>
 
     <label>Symptoms</label>
     <div class="checklist" id="symptoms"></div>
 
     <label>Notes</label>
-    <textarea id="notes"></textarea>
+    <textarea id="notes" placeholder="Optional"></textarea>
 
-    <div class="row">
-      <div class="badge" id="status">Enter BP</div>
-      <div class="danger" id="crisis" style="display:none">Possible crisis</div>
-    </div>
-
-    <div class="row">
-      <button class="primary" id="save">Save</button>
-      <button id="clear">Clear</button>
+    <!-- buttons after inputs -->
+    <div class="toolbar">
+      <button class="big primary" id="save">Save</button>
+      <button class="big" id="cancelAdd">Back</button>
+      <button class="big" id="clear">Clear</button>
     </div>
   </section>
 
   <!-- LOG -->
   <section class="card hidden" id="pLog">
-    <input id="search" placeholder="Search symptoms or notes">
-    <button id="exportGPT" class="primary" style="margin-top:12px">
-      Export for ChatGPT / Doctor / VA
-    </button>
+    <input id="search" placeholder="Search (symptoms or notes)">
+    <div class="toolbar">
+      <button class="big primary" id="exportGPT">Export for ChatGPT / Doctor / VA</button>
+      <button class="big" id="backFromLog">Back</button>
+    </div>
     <div id="list"></div>
   </section>
 
   <!-- CHARTS -->
   <section class="card hidden" id="pCharts">
+    <div class="toolbar">
+      <button class="big" id="backFromCharts">Back</button>
+    </div>
+    <div class="note" style="margin-top:10px">Systolic (top) and Heart Rate (bottom)</div>
     <canvas id="bpChart" height="360"></canvas>
     <canvas id="hrChart" height="260" style="margin-top:16px"></canvas>
   </section>
+
 </main>
 
 <script>
 const PRESETS=["Sweaty","Dizzy","Chest tight","Panic","Headache","Brain fog"];
-const KEY="vitals_v3";
+const KEY="vitals_v4";
 const $=id=>document.getElementById(id);
 
-function now(){
-  const d=new Date();
-  date.value=d.toISOString().slice(0,10);
-  time.value=d.toTimeString().slice(0,5);
-  sys.focus();
+function load(){ return JSON.parse(localStorage.getItem(KEY)||"[]"); }
+function saveAll(a){ localStorage.setItem(KEY, JSON.stringify(a)); }
+
+function show(which){
+  pHome.classList.toggle("hidden", which!=="home");
+  pAdd.classList.toggle("hidden", which!=="add");
+  pLog.classList.toggle("hidden", which!=="log");
+  pCharts.classList.toggle("hidden", which!=="charts");
 }
 
-function load(){return JSON.parse(localStorage.getItem(KEY)||"[]")}
-function saveAll(a){localStorage.setItem(KEY,JSON.stringify(a))}
+function fmtWhen(t){
+  const d=new Date(t);
+  return d.toLocaleString();
+}
 
-PRESETS.forEach((s,i)=>{
-  const d=document.createElement("div");
-  d.className="check";
-  d.innerHTML=`<input type="checkbox" id="s${i}"><label for="s${i}">${s}</label>`;
-  symptoms.appendChild(d);
-});
+function nowStamp(){
+  const d=new Date();
+  stamp.textContent = "Time: " + d.toLocaleString();
+  return d;
+}
 
 function category(sys,dia){
-  if(sys>=180||dia>=120)return["Crisis",true];
-  if(sys<120&&dia<80)return["Normal",false];
-  if(sys<130)return["Elevated",false];
-  if(sys<140||dia<90)return["Stage 1",false];
-  return["Stage 2",false];
+  if(sys>=180||dia>=120) return ["Crisis", true];
+  if(sys<120&&dia<80)   return ["Normal", false];
+  if(sys<130)           return ["Elevated", false];
+  if(sys<140||dia<90)   return ["Stage 1", false];
+  return ["Stage 2", false];
 }
 
-function update(){
-  const s=+sys.value,d=+dia.value;
-  if(!s||!d)return;
-  const [c,x]=category(s,d);
-  status.textContent=c;
-  crisis.style.display=x?"block":"none";
+function updateStatus(){
+  const s=+sys.value, d=+dia.value;
+  if(!s || !d) { status.textContent="Enter BP"; crisis.style.display="none"; return; }
+  const [c, x] = category(s,d);
+  status.textContent = c;
+  crisis.style.display = x ? "block" : "none";
 }
 
-sys.oninput=update;
-dia.oninput=update;
-
-save.onclick=()=>{
-  const e={
-    t:new Date(`${date.value}T${time.value}`),
-    s:+sys.value,
-    d:+dia.value,
-    h:+hr.value,
-    sym:PRESETS.filter((_,i)=>$("s"+i).checked),
-    n:notes.value
-  };
-  const a=load();
-  a.push(e);
-  saveAll(a);
-  clear.onclick();
-  status.textContent="Saved";
-};
-
-clear.onclick=()=>{
-  sys.value=dia.value=hr.value=notes.value="";
-  PRESETS.forEach((_,i)=>$("s"+i).checked=false);
+function clearForm(){
+  sys.value = "";
+  dia.value = "";
+  hr.value  = "";
+  notes.value = "";
+  PRESETS.forEach((_,i)=> $("s"+i).checked=false);
+  updateStatus();
   sys.focus();
-};
-
-function tab(a){
-  pEntry.classList.toggle("hidden",a!=="e");
-  pLog.classList.toggle("hidden",a!=="l");
-  pCharts.classList.toggle("hidden",a!=="c");
 }
 
-tEntry.onclick=()=>tab("e");
-tLog.onclick=()=>{tab("l");renderLog()};
-tCharts.onclick=()=>{tab("c");renderCharts()};
+function buildSymptoms(){
+  symptoms.innerHTML="";
+  PRESETS.forEach((s,i)=>{
+    const d=document.createElement("div");
+    d.className="check";
+    d.innerHTML = `<input type="checkbox" id="s${i}"><label for="s${i}">${s}</label>`;
+    symptoms.appendChild(d);
+  });
+}
 
 function renderLog(){
-  list.innerHTML="";
-  load().slice().reverse().forEach(e=>{
-    const d=document.createElement("div");
-    d.className="item";
-    d.textContent=`${e.t.toLocaleString()} | BP ${e.s}/${e.d} | HR ${e.h} | ${e.sym.join(", ")} ${e.n||""}`;
-    list.appendChild(d);
+  const q = (search.value||"").trim().toLowerCase();
+  const data = load().slice().reverse();
+  list.innerHTML = "";
+
+  if(!data.length){
+    const empty=document.createElement("div");
+    empty.className="item";
+    empty.innerHTML = `<div class="bigline">No entries yet</div><div class="line muted">Tap “Add” to record BP.</div>`;
+    list.appendChild(empty);
+    return;
+  }
+
+  data.forEach(e=>{
+    const when = fmtWhen(e.t);
+    const bp = `${e.s}/${e.d}`;
+    const hrVal = e.h ? String(e.h) : "—";
+    const sym = (e.sym||[]).join(", ") || "None";
+    const notesTxt = (e.n||"").trim() || "None";
+
+    const hay = `${when} ${bp} ${hrVal} ${sym} ${notesTxt}`.toLowerCase();
+    if(q && !hay.includes(q)) return;
+
+    const box=document.createElement("div");
+    box.className="item";
+    box.innerHTML = `
+      <div class="when">${when}</div>
+      <div class="bigline">BP ${bp} • HR ${hrVal}</div>
+      <div class="line"><b>Symptoms:</b> ${sym}</div>
+      <div class="line muted"><b>Notes:</b> ${notesTxt}</div>
+    `;
+    list.appendChild(box);
   });
 }
 
-function draw(canvas,vals){
-  const c=$(canvas),ctx=c.getContext("2d");
+function setCanvasSize(canvasId){
+  const c=$(canvasId);
+  const ratio = window.devicePixelRatio || 1;
+  const rect = c.getBoundingClientRect();
+  c.width = Math.max(1, Math.floor(rect.width * ratio));
+  c.height = Math.max(1, Math.floor(c.height * ratio));
+  return {c, ratio};
+}
+
+function drawSeries(canvasId, vals){
+  const {c} = setCanvasSize(canvasId);
+  const ctx = c.getContext("2d");
   ctx.clearRect(0,0,c.width,c.height);
-  if(!vals.length)return;
-  const max=Math.max(...vals),min=Math.min(...vals);
-  ctx.beginPath();
-  vals.forEach((v,i)=>{
-    const x=i*(c.width/(vals.length-1||1));
-    const y=c.height-((v-min)/(max-min||1))*c.height;
-    if(i===0)ctx.moveTo(x,y);else ctx.lineTo(x,y);
-  });
+
+  if(!vals.length){
+    // empty hint
+    ctx.fillStyle = "#b9c0cc";
+    ctx.font = `${Math.floor(18*(window.devicePixelRatio||1))}px system-ui`;
+    ctx.fillText("Add at least 1 reading to see a chart.", 16, 40);
+    return;
+  }
+
+  const max=Math.max(...vals), min=Math.min(...vals);
+  const pad = 24*(window.devicePixelRatio||1);
+  const w = c.width - pad*2;
+  const h = c.height - pad*2;
+
+  const xFor = (i,n)=> (n<=1) ? (pad + w/2) : (pad + (i*(w/(n-1))));
+  const yFor = (v)=> {
+    const denom = (max-min)||1;
+    return pad + h - ((v-min)/denom)*h;
+  };
+
+  // axes border
+  ctx.strokeStyle="#2a3346";
+  ctx.lineWidth=2*(window.devicePixelRatio||1);
+  ctx.strokeRect(pad, pad, w, h);
+
+  // line or dot
   ctx.strokeStyle="#6ea8ff";
-  ctx.lineWidth=4;
+  ctx.lineWidth=4*(window.devicePixelRatio||1);
+  ctx.beginPath();
+
+  if(vals.length===1){
+    const x=xFor(0,1), y=yFor(vals[0]);
+    ctx.arc(x,y,6*(window.devicePixelRatio||1),0,Math.PI*2);
+    ctx.fillStyle="#6ea8ff";
+    ctx.fill();
+    return;
+  }
+
+  vals.forEach((v,i)=>{
+    const x=xFor(i,vals.length), y=yFor(v);
+    if(i===0) ctx.moveTo(x,y); else ctx.lineTo(x,y);
+  });
   ctx.stroke();
 }
 
 function renderCharts(){
   const a=load();
-  draw("bpChart",a.map(e=>e.s));
-  draw("hrChart",a.map(e=>e.h));
+  drawSeries("bpChart", a.map(e=>+e.s).filter(Boolean));
+  drawSeries("hrChart", a.map(e=>+e.h).filter(Boolean));
 }
 
-exportGPT.onclick=()=>{
+function exportText(){
   const data=load();
-  if(!data.length){alert("No vitals recorded yet.");return;}
+  if(!data.length){ alert("No vitals recorded yet."); return; }
+
   const lines=[];
   lines.push("Vitals Log Export");
-  lines.push("");
   lines.push("DATE | TIME | SYS | DIA | HR | SYMPTOMS | NOTES");
   lines.push("------------------------------------------------");
+
   data.forEach(e=>{
     const d=new Date(e.t);
     const date=d.toISOString().slice(0,10);
     const time=d.toTimeString().slice(0,5);
-    lines.push(`${date} | ${time} | ${e.s} | ${e.d} | ${e.h} | ${e.sym.join(", ")} | ${e.n||""}`);
+    const sym=(e.sym||[]).join(", ");
+    const notes=(e.n||"").replace(/\s+/g," ").trim();
+    lines.push(`${date} | ${time} | ${e.s||""} | ${e.d||""} | ${e.h||""} | ${sym} | ${notes}`);
   });
+
   const out=lines.join("\n");
   navigator.clipboard.writeText(out).then(
-    ()=>alert("Copied to clipboard."),
+    ()=>alert("Copied. Paste into ChatGPT."),
     ()=>alert(out)
   );
+}
+
+/* wire up */
+buildSymptoms();
+show("home");
+
+goAdd.onclick = ()=>{
+  show("add");
+  nowStamp();
+  clearForm();
 };
 
-now();
+goLog.onclick = ()=>{
+  show("log");
+  renderLog();
+};
+
+goCharts.onclick = ()=>{
+  show("charts");
+  renderCharts();
+};
+
+backFromLog.onclick = ()=> show("home");
+backFromCharts.onclick = ()=> show("home");
+cancelAdd.onclick = ()=> show("home");
+
+clear.onclick = ()=> clearForm();
+
+sys.oninput = updateStatus;
+dia.oninput = updateStatus;
+
+save.onclick = ()=>{
+  const s=+sys.value, d=+dia.value, h=+hr.value;
+  if(!s || !d){
+    alert("Enter systolic and diastolic.");
+    return;
+  }
+  const t = new Date();
+  const entry = {
+    t: t.toISOString(),
+    s, d,
+    h: h || null,
+    sym: PRESETS.filter((_,i)=> $("s"+i).checked),
+    n: notes.value || ""
+  };
+  const a=load();
+  a.push(entry);
+  saveAll(a);
+  show("home");
+  homeHint.textContent = "Saved.";
+};
+
+search.oninput = renderLog;
+exportGPT.onclick = exportText;
+
+window.addEventListener("resize", ()=>{
+  if(!pCharts.classList.contains("hidden")) renderCharts();
+});
 </script>
 </body>
 </html>
+```0
+
