--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
       --shadow: 0 12px 30px rgba(0,0,0,.35);
       --focus: 0 0 0 3px rgba(79,140,255,.30);
 
-      /* sizes tuned down */
       --h1: 34px;
       --h2: 18px;
       --label: 13px;
@@ -91,7 +90,6 @@
 
     .hidden{ display:none !important; }
 
-    /* Buttons */
     .toolbar{
       display:flex;
       gap: 10px;
@@ -126,7 +124,6 @@
       border-color: rgba(46,62,92,.75);
     }
 
-    /* HOME big buttons (kept) */
     .homeStack{ display:flex; flex-direction:column; gap: 12px; }
     .btnBig{
       width:100%;
@@ -137,7 +134,6 @@
       min-width: auto;
     }
 
-    /* Sections */
     .sectionTitle{
       font-size: var(--h2);
       font-weight: 750;
@@ -150,7 +146,13 @@
       line-height: 1.35;
     }
 
-    /* Inputs */
+    .metaLine{
+      color: var(--muted2);
+      font-size: 12px;
+      margin-top: 8px;
+      letter-spacing: .15px;
+    }
+
     label{
       display:block;
       font-size: var(--label);
@@ -176,22 +178,13 @@
       box-shadow: var(--focus);
     }
 
-    /* 3 BP fields inline */
     .grid3{
       display:grid;
       grid-template-columns: 1fr 1fr 1fr;
       gap: 10px;
     }
-    @media (max-width: 720px){
-      .grid3{
-        grid-template-columns: 1fr 1fr 1fr; /* keep 3-inline as long as possible */
-        gap: 8px;
-      }
-    }
     @media (max-width: 380px){
-      .grid3{
-        grid-template-columns: 1fr 1fr;
-      }
+      .grid3{ grid-template-columns: 1fr 1fr; }
       .grid3 .forceRow{ grid-column: 1 / -1; }
     }
 
@@ -202,7 +195,6 @@
       letter-spacing: .2px;
     }
 
-    /* ADD: sticky top toolbar to avoid “scroll to submit” */
     .stickyTop{
       position: sticky;
       top: 0;
@@ -215,31 +207,22 @@
       backdrop-filter: blur(10px);
     }
 
-    /* Symptoms: 2-column compact list (NOT pills) */
-    .symptomsWrap{
-      margin-top: 6px;
-      padding-top: 2px;
-    }
+    .symptomsWrap{ margin-top: 6px; padding-top: 2px; }
     .symptomsGrid{
       display:grid;
       grid-template-columns: 1fr 1fr;
-      gap: 6px 14px;          /* tight */
+      gap: 6px 14px;
       align-items:center;
-    }
-    @media (max-width: 520px){
-      .symptomsGrid{ grid-template-columns: 1fr 1fr; } /* keep 2 cols as requested */
     }
     .symRow{
       display:flex;
       align-items:center;
       gap: 10px;
-      padding: 2px 0;         /* minimal vertical space */
+      padding: 2px 0;
       margin: 0;
       cursor:pointer;
       user-select:none;
     }
-
-    /* Outlined checkbox only */
     .symRow input[type="checkbox"]{
       appearance:none;
       -webkit-appearance:none;
@@ -274,7 +257,6 @@
       color: var(--text);
     }
 
-    /* LOG */
     .logControls{
       display:grid;
       grid-template-columns: 1fr 1fr;
@@ -340,9 +322,8 @@
       margin-top: 6px;
     }
 
-    /* CHART */
     .chartBox{
-      background: rgba(255,255,255,.03);
+      background: rgba(255,255,255,.04);
       border: 1px solid rgba(46,62,92,.70);
       border-radius: 18px;
       padding: 10px;
@@ -371,6 +352,7 @@
       </div>
 
       <div class="subtle">Data stays on your phone (local only).</div>
+      <div class="metaLine" id="homeCount">Records: 0</div>
     </div>
 
     <!-- ADD -->
@@ -419,7 +401,6 @@
 
       <div class="sectionTitle">Search</div>
       <input id="searchBox" placeholder="Type a word: sweaty, dizzy, headache..." />
-      <!-- instructions removed -->
 
       <div class="logControls">
         <div>
@@ -431,8 +412,8 @@
           <select id="toDate"></select>
         </div>
       </div>
-      <!-- date tip removed -->
 
+      <div class="metaLine" id="logCount">Showing: 0 of 0</div>
       <div class="logList" id="logList"></div>
     </div>
 
@@ -453,12 +434,6 @@
   </div>
 
 <script>
-/* =========================
-   Single-file PWA
-   - manifest via data: URI
-   - service worker via Blob URL
-   - install button ONLY when browser offers prompt
-========================= */
 (function setupPWA(){
   const iconSVG = encodeURIComponent(`
     <svg xmlns="http://www.w3.org/2000/svg" width="512" height="512">
@@ -549,20 +524,84 @@ const SYMPTOMS = [
   "Nausea","Short breath","Hot ears","Shaky","Blurred vision","Weakness"
 ];
 
+function pad2(n){ return String(n).padStart(2,"0"); }
+
+function isValidDate(d){
+  return d instanceof Date && !Number.isNaN(d.getTime());
+}
+
+function normalizeISO(ts){
+  // Accept ISO, numeric epoch, or Date-like strings; return ISO or null.
+  if (ts == null) return null;
+  if (typeof ts === "number" && Number.isFinite(ts)){
+    const d = new Date(ts);
+    return isValidDate(d) ? d.toISOString() : null;
+  }
+  const s = String(ts).trim();
+  if (!s) return null;
+  const d = new Date(s);
+  return isValidDate(d) ? d.toISOString() : null;
+}
+
+function sanitizeEntries(raw){
+  // Fix/normalize entries; drop irreparable ones.
+  if (!Array.isArray(raw)) return [];
+  const out = [];
+  for (const e of raw){
+    if (!e || typeof e !== "object") continue;
+
+    const sys = Number.isFinite(+e.sys) ? parseInt(e.sys,10) : null;
+    const dia = Number.isFinite(+e.dia) ? parseInt(e.dia,10) : null;
+    const hr  = Number.isFinite(+e.hr)  ? parseInt(e.hr,10)  : null;
+
+    // If vitals are missing, skip.
+    if (sys == null || dia == null || hr == null) continue;
+
+    const ts = normalizeISO(e.ts) || new Date().toISOString();
+
+    const symptoms = Array.isArray(e.symptoms) ? e.symptoms.filter(Boolean).map(String) : [];
+    const notes = (e.notes == null) ? "" : String(e.notes);
+
+    out.push({
+      id: e.id || (crypto.randomUUID ? crypto.randomUUID() : String(Date.now()) + Math.random().toString(16).slice(2)),
+      ts,
+      sys, dia, hr,
+      symptoms,
+      notes
+    });
+  }
+  // keep newest-first if possible
+  out.sort((a,b) => new Date(b.ts) - new Date(a.ts));
+  return out;
+}
+
 function loadEntries(){
   try{
     const raw = localStorage.getItem(STORAGE_KEY);
     const arr = raw ? JSON.parse(raw) : [];
-    return Array.isArray(arr) ? arr : [];
-  }catch(e){ return []; }
+    const cleaned = sanitizeEntries(arr);
+
+    // If we had to clean, persist the cleaned dataset so NaNs stop returning.
+    if (Array.isArray(arr) && cleaned.length !== arr.length){
+      localStorage.setItem(STORAGE_KEY, JSON.stringify(cleaned));
+    } else {
+      // Also normalize any bad timestamps without changing count.
+      const anyBad = Array.isArray(arr) && arr.some(e => !normalizeISO(e && e.ts));
+      if (anyBad) localStorage.setItem(STORAGE_KEY, JSON.stringify(cleaned));
+    }
+    return cleaned;
+  }catch(e){
+    return [];
+  }
 }
+
 function saveEntries(entries){
-  localStorage.setItem(STORAGE_KEY, JSON.stringify(entries));
+  localStorage.setItem(STORAGE_KEY, JSON.stringify(sanitizeEntries(entries)));
 }
-function pad2(n){ return String(n).padStart(2,"0"); }
 
 function fmtDateTimeLocal(iso){
   const d = new Date(iso);
+  if (!isValidDate(d)) return "Unknown date/time";
   const mm = pad2(d.getMonth()+1);
   const dd = pad2(d.getDate());
   const yyyy = d.getFullYear();
@@ -573,14 +612,21 @@ function fmtDateTimeLocal(iso){
   const sec = pad2(d.getSeconds());
   return `${mm}/${dd}/${yyyy}, ${pad2(hh)}:${min}:${sec} ${ampm}`;
 }
+
 function isoDayKey(iso){
   const d = new Date(iso);
-  return `${d.getFullYear()}-${pad2(d.getMonth()+1)}-${pad2(d.getDate())}`;
+  if (!isValidDate(d)) return null;
+  const k = `${d.getFullYear()}-${pad2(d.getMonth()+1)}-${pad2(d.getDate())}`;
+  // Basic guard
+  if (!/^\d{4}-\d{2}-\d{2}$/.test(k)) return null;
+  return k;
 }
+
 function clampInt(v){
   const n = parseInt(String(v).trim(), 10);
   return Number.isFinite(n) ? n : null;
 }
+
 function escapeHTML(s){
   return String(s).replace(/[&<>"']/g, c => ({
     "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#039;"
@@ -598,6 +644,7 @@ const screens = {
 };
 function show(name){
   Object.keys(screens).forEach(k => screens[k].classList.toggle("hidden", k !== name));
+  refreshCounts();
   if (name === "log") renderLog();
   if (name === "charts") renderCharts();
   if (name === "add") resetAdd();
@@ -624,6 +671,11 @@ document.getElementById("btnExportFromHome").onclick = () => {
   show("log");
   setTimeout(()=>doExport(), 50);
 };
+
+function refreshCounts(){
+  const all = loadEntries();
+  document.getElementById("homeCount").textContent = `Records: ${all.length}`;
+}
 
 /* =========================
    ADD screen
@@ -720,9 +772,16 @@ const elSearch = document.getElementById("searchBox");
 const elFrom = document.getElementById("fromDate");
 const elTo = document.getElementById("toDate");
 const elLogList = document.getElementById("logList");
+const elLogCount = document.getElementById("logCount");
 
 function buildDateOptions(entries){
-  const days = Array.from(new Set(entries.map(e => isoDayKey(e.ts)))).sort().reverse();
+  const keys = [];
+  for (const e of entries){
+    const k = isoDayKey(e.ts);
+    if (k) keys.push(k);
+  }
+  const days = Array.from(new Set(keys)).sort().reverse();
+
   const opts = ["(any)", ...days];
 
   function setSelect(sel){
@@ -742,6 +801,7 @@ function buildDateOptions(entries){
 
 function passesDateRange(entry, fromKey, toKey){
   const k = isoDayKey(entry.ts);
+  if (!k) return false;
   if (fromKey && fromKey !== "(any)" && k < fromKey) return false;
   if (toKey && toKey !== "(any)" && k > toKey) return false;
   return true;
@@ -772,8 +832,9 @@ function renderLog(){
   buildDateOptions(entries);
 
   const filtered = getFilteredEntries();
-  elLogList.innerHTML = "";
+  elLogCount.textContent = `Showing: ${filtered.length} of ${entries.length}`;
 
+  elLogList.innerHTML = "";
   if (filtered.length === 0){
     const empty = document.createElement("div");
     empty.className = "mutedBlock";
@@ -889,24 +950,30 @@ function renderCharts(){
 function drawChart(sys, dia, hr){
   const W = canvas.width, H = canvas.height;
   ctx.clearRect(0,0,W,H);
-  ctx.fillStyle = "rgba(255,255,255,.03)";
+
+  // Slightly brighter panel for readability
+  ctx.fillStyle = "rgba(255,255,255,.06)";
   ctx.fillRect(0,0,W,H);
 
-  const pad = {l:42, r:16, t:16, b:28};
+  const pad = {l:54, r:18, t:16, b:40}; // more left/bottom padding
   const innerW = W - pad.l - pad.r;
   const innerH = H - pad.t - pad.b;
 
   const all = [...sys, ...dia, ...hr];
   let minV = Math.min(...all);
   let maxV = Math.max(...all);
-  const range = Math.max(10, maxV - minV);
-  minV = Math.floor((minV - range*0.12));
-  maxV = Math.ceil((maxV + range*0.12));
+  const range0 = Math.max(10, maxV - minV);
+  minV = Math.floor(minV - range0*0.15);
+  maxV = Math.ceil(maxV + range0*0.15);
 
-  ctx.strokeStyle = "rgba(46,62,92,.65)";
+  // grid lines (higher contrast)
+  ctx.strokeStyle = "rgba(154,168,196,.22)";
   ctx.lineWidth = 1;
 
   const gridY = 5;
+  ctx.font = "13px system-ui,Segoe UI,Roboto,Arial"; // larger labels
+  ctx.fillStyle = "rgba(216,224,240,.78)";           // higher contrast labels
+
   for (let i=0;i<=gridY;i++){
     const y = pad.t + (innerH * i/gridY);
     ctx.beginPath();
@@ -914,10 +981,8 @@ function drawChart(sys, dia, hr){
     ctx.lineTo(pad.l + innerW, y);
     ctx.stroke();
 
-    const val = Math.round(maxV - (range*(i/gridY)));
-    ctx.fillStyle = "rgba(154,168,196,.85)";
-    ctx.font = "12px system-ui,Segoe UI,Roboto,Arial";
-    ctx.fillText(String(val), 8, y+4);
+    const val = Math.round(maxV - ((maxV-minV)*(i/gridY)));
+    ctx.fillText(String(val), 10, y+4);
   }
 
   const n = sys.length;
@@ -926,7 +991,7 @@ function drawChart(sys, dia, hr){
 
   function line(vals, stroke){
     ctx.strokeStyle = stroke;
-    ctx.lineWidth = 2;
+    ctx.lineWidth = 2.4; // a bit thicker
     ctx.beginPath();
     vals.forEach((v,i) => {
       const x = xAt(i), y = yAt(v);
@@ -939,37 +1004,34 @@ function drawChart(sys, dia, hr){
     vals.forEach((v,i) => {
       const x = xAt(i), y = yAt(v);
       ctx.beginPath();
-      ctx.arc(x,y,3,0,Math.PI*2);
+      ctx.arc(x,y,3.2,0,Math.PI*2);
       ctx.fill();
     });
   }
 
-  line(sys, "rgba(79,140,255,.95)");
-  line(dia, "rgba(154,168,196,.95)");
-  line(hr,  "rgba(120,220,180,.85)");
+  // Keep your palette but increase opacity for visibility
+  line(sys, "rgba(79,140,255,.98)");
+  line(dia, "rgba(216,224,240,.88)");
+  line(hr,  "rgba(120,220,180,.92)");
 
-  const lx = pad.l, ly = H - 10;
-  ctx.font = "12px system-ui,Segoe UI,Roboto,Arial";
-  function leg(text, color, x){
+  // legend (moved to top-left INSIDE chart for readability)
+  const lx = pad.l + 10;
+  let ly = pad.t + 14;
+  ctx.font = "13px system-ui,Segoe UI,Roboto,Arial";
+  function leg(text, color){
     ctx.fillStyle = color;
-    ctx.fillRect(x, ly-9, 10, 3);
-    ctx.fillStyle = "rgba(216,224,240,.92)";
-    ctx.fillText(text, x+14, ly-4);
-    return x + 14 + ctx.measureText(text).width + 14;
+    ctx.fillRect(lx, ly-8, 14, 4);
+    ctx.fillStyle = "rgba(216,224,240,.90)";
+    ctx.fillText(text, lx+18, ly-3);
+    ly += 16;
   }
-  let x = lx;
-  x = leg("Systolic", "rgba(79,140,255,.95)", x);
-  x = leg("Diastolic", "rgba(154,168,196,.95)", x);
-  x = leg("Heart Rate", "rgba(120,220,180,.85)", x);
+  leg("Systolic", "rgba(79,140,255,.98)");
+  leg("Diastolic", "rgba(216,224,240,.88)");
+  leg("Heart Rate", "rgba(120,220,180,.92)");
 }
 
-/* Screen buttons */
-document.getElementById("btnExportFromHome").addEventListener("click", () => show("log"));
-document.getElementById("goCharts").addEventListener("click", () => setTimeout(renderCharts, 10));
-
-/* Initial */
+/* initial */
 show("home");
 </script>
 </body>
 </html>
-```0
